# crewai_course_review

./: README.md  pyproject.toml
crewai_course_review/: main.py
