[tool.poetry]
name = "crewai-course-review"
version = "0.1.0"
description = ""
authors = ["ricklon <rianders@docs.rutgers.edu>"]
readme = "README.md"
packages = [{include = "crewai_course_review"}]

[tool.poetry.dependencies]
python = "^3.10"
crewai = "^0.1.32"
langchain = "^0.1.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
